--- a/graph.html
+++ b/graph.html
@@ -1,11 +1,13 @@
 <!doctype html><html><head>
 <title>This is a test</title>
+
+
 </head>
 <body><h1>Check console...</h1>
-</body>
+<canvas id="canvas" width="800" height="800"></canvas>
 <script>
 
-/* TODO:
+/* T
   1. Create seperate files for Graph and Node class.
   2, Implement check for room rules (sum, zero-max, limit, and single-same) before traversal.
   3. In what order should rooms traverse when deciding between neighbors?
@@ -196,12 +198,118 @@ class Graph {
         this.DFS_helper(neighbors[i], visited, smallest); //can add a check to ensure it follows 4 rules with boolean here...
       }
   }
-}
 
-let graph = new Graph();
+  // residue: |a-b| + |b-c| + |c-a|
+   residue(a, b, c) {
+    if (a < 0) {
+      a *= -1;
+    } else if (b < 0) {
+      b *= -1;
+    } else if (c < 0) {
+      c *= -1;
+    }
+    return ((a-b) + (b-c) + (c-a));
+  }
+
+  // limit rule: x less than 16, y less than 9, z less than 7
+   limit_rule(x, y, z) {
+    if (x > 16) {
+      return false;
+    } else if (y > 9) {
+      return false;
+    } else if (z > 7) {
+      return false;
+    }
+    return true;
+  }
+
+  // sum rule: check if (a + b + c) is equal to the previous sum
+   sum_rule(a, b, c, sum) {
+    var temp_sum = a + b + c;
+    if (temp_sum != sum) {
+      return false;
+    }
+    return true;
+  }
+
+  // single-same rule: compare 1st povar (a, b, c) and 2nd povar (x, y, z)
+   single_same_rule(a, b, c, x, y, z) {
+    if (a == x) {
+      zero_max_rule(y, z);
+      return true;
+    } else if (b == y) {
+      zero_max_rule(x, z);
+      return true;
+    } else if (c == z) {
+      zero_max_rule(x, y);
+      return true;
+    }
+    return false;
+  }
+
+  // zero-max rule
+   zero_max_rule(other1, other2, same) {
+    var limit = 16;
+    var max = limit - same;
+    var temp = limit;
+    var temp2 = limit;
+    temp -= other1;
+    temp2 -= other2;
+    if (temp == max) {
+      temp -= other1;
+      if (temp == 0) {
+        return true;
+      }
+    } else if (temp2 == max) {
+      temp2 -= other2;
+      if (temp2 == 0) {
+        return true;
+      }
+    }
+    return false;
+  }
+
+  // verify function
+   verify_all(a, b, c, x, y, z, sum, same, other1, other2) {
+    var pass1, pass2, pass3, pass4 = true;
+    pass1 = limit_rule(a, b, c);
+    pass2 = sum_rule(x, y, z);
+    pass3 = single_same_rule(a, b, c, sum);
+    pass4 = zero_max_rule(other1, other2, same);
+    if (pass1 == false || pass2 == false || pass3 == false || pass4 == false) {
+      return false;
+    }
+    return true;
+  }
+
+  draw_rect( rctx, rstroke, rfill, rx, ry, rw ,rh )
+  {
+      rstroke = rstroke || 'lightgrey';
+      rfill = rfill || 'dimgrey';
+      rx = rx || 0;
+      ry = ry || 0;
+      rctx.save( );
+      rctx.strokeStyle = rstroke;
+      rctx.fillStyle = rfill;
+      rctx.lineWidth = 1;
+      rctx.fillRect( rx, ry, rw, rh );
+      rctx.stroke( );
+      rctx.restore( );
+  }
+
+
+
+}
+graph = new Graph();
 graph.generate_nodes();
 graph.print_adjacency();
 graph.DFS();
+graph.limit_rule(3, 2, 1);
+const canvas = document.getElementById('canvas');
+const ctx = canvas.getContext('2d');
+graph.draw_rect(ctx, 'lightgrey', 'black',0,0,800,800);
+
 
 </script>
+</body>
 </html>
